src/main/default/objects/Price_Book_Assignment__c/Price_Book_Assignment__c.object-meta.xml
<CustomObject>
    <label>Price Book Assignment</label>
    <nameField>
        <label>Price Book Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Book Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>