src/main/default/objects/Price_Book_Assignment__c/fields/Auto_Added__c.field-meta.xml
<CustomField>
    <fullName>Auto_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether or not the entry is auto added by the system, for example SyncConfiguration trigger.</description>
    <inlineHelpText>If selected, the price book assignment was created automatically by the system. A price book assignment gets created automatically if a user has access to a price book through a sync configuration.</inlineHelpText>
    <label>Auto Added</label>
    <type>Checkbox</type>
</CustomField>