src/main/default/objects/Price_Book_Assignment__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <inlineHelpText>Price book to which the user is granted access in FieldFX Mobile through the price book assignment.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Price Book Assignments</relationshipLabel>
    <relationshipName>Price_Book_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>